# projeto_lakehouse

./: .gitignore  pyproject.toml
create_dataset/: create_dataset_raw.py  local_to_aws.py
