[tool.poetry]
name = "projeto-lakehouse"
version = "0.1.0"
description = ""
authors = ["Felipe Santos <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.0.1"
polars = "^1.11.0"
duckdb = "^1.1.2"
faker = "^30.8.1"
dbt-core = "^1.8.8"
dbt-postgres = "^1.8.2"
psycopg2 = "^2.9.10"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
plotly = "^5.24.1"
pyarrow = "^17.0.0"
boto3 = "^1.35.49"
pandas = "^2.2.3"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"